# ethereum_war_game_tooling

./: .envrc  .gitignore  .tool-versions  Makefile  README.md  Tiltfile  docker-compose.yml  setup_geth_nodes.sh  shell.nix
.github/workflows/: .elixir_ci.yml.un~  elixir_ci.yml
contracts/src/: Storage.sol  simplestorage.sol
contracts/src/test/: simplestorage.t.sol
eth_client/: .gitignore  .iex.exs  Dockerfile  Makefile  README.md  docker-compose.yml  mix.exs  opcodes.json  startup.sh
eth_client/config/: config.exs
eth_client/lib/: eth_client.ex
eth_client/lib/eth_client/: abi.ex  account.ex  application.ex  context.ex  contract.ex  new_raw_transaction.ex  nodes_list.ex  nodes_list_old.ex  opcodes.ex  packet.ex  raw_transaction.ex  rpc.ex  web_socket.ex
eth_client/livebooks/: file_system_test.livemd  livebook-test.livemd
eth_client/native/ethclient_signer/: Cargo.toml  README.md
eth_client/native/ethclient_signer/src/: lib.rs  raw_ping_packet.rs  raw_transaction.rs
eth_client/priv/: decode_address.py  decompile.py
eth_client/test/: abi_test.exs  contract_test.exs  eth_client_test.exs  eth_contract_opcodes_test.exs  eth_rpc_test.exs
frontend/: .gitignore  README.md  docker-compose.yml  mix.exs
frontend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
frontend/lib/: frontend_web.ex
geth_nodes/: Makefile  README.md  docker-compose.yml  genesis.json  health_check.sh  setup_geth_nodes.sh
hh_node/: package-lock.json
livebooks/: livebook-test.livemd
livebooks/ethernauts/: fallback.livemd  fallout.livemd
(+42 files in other folders)
